Skips processing more SavePageLater requests in current processing window when one completes unsuccessfully.

Ideally, we would consider processing another request in the same processing
window for certain types of page-specific failures (follow-on work) but the
default needs to be more conservative in case we are seeing system resource
related failures/cancels.

BUG=632119

Review-Url: https://codereview.chromium.org/2196293002
Cr-Commit-Position: refs/heads/master@{#409554}

Former-commit-id: e91a689c5f795a9c7f7d472d75c970d237897e5c